--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link rel="shortcut icon" href="icon.ico">
-	<link rel="stylesheet" type="text/css" href="stilo.css">
+	<link rel="stylesheet" type="text/css" href="https://github.com/krlin/krlin.github.io/blob/master/estilo.css">
 </head>
 <body>
 	<header>
