--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="robots" content="index,follow">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-	<link rel="shortcut icon" href="icon.ico">
+	<link rel="shortcut icon" href="http://krlin.github.io/icon.ico">
 	<link rel="stylesheet" type="text/css" href="https://krlin.github.io/estilo.css ">
 </head>
 <body>
@@ -21,10 +21,10 @@
 	</header>
 		<div class="corpo">
 			<h1>Carlos Guimarães</h1>
-			<img class="perfil" src="foto.jpg">
+			<img class="perfil" src="http://krlin.github.io/foto.jpg">
 			<p class="p1">Estudante de Tecnologia em Sistemas para Internet no IF Sudeste Campus Barbacena, cursando o 1º período. Esta página inicialmente era um exercício da aula de Desenvolvimento de Páginas Web, veio a ser agora meu portfólio para apresentação.</p>
 			<div class="html">
-				<img  src="html+css.jpg">
+				<img  src="http://krlin.github.io/html+css.jpg">
 			</div>	
 			<div class="desc">
 				<p class="p2">No desenvolvimento dessa página foram usados</p>
