--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<header>
 		<div>
-			<a class="head" href="pagina.html"><i class="fa fa-home"></i> Home</a>
+			<a class="head" href="http://krlin.github.io"><i class="fa fa-home"></i> Home</a>
 			<a class="head" href="http://facebook.com/carlos.here"><i class="fa fa-facebook"></i> Facebook</a>
 		</div>
 	</header>
