--- a/index.html
+++ b/index.html
@@ -48,38 +48,72 @@
 				<input type="submit" value="Enviar"></input>
 			</form>
 		</section>
-		<div class="left">	
-			<section>
-				<p class="p4">Progresso da Construção do Site</p>
-				<div id="prog">
-					<div class="progresso">
-						<div class="progresso2">
-						20%
-						</div>			
+		<section class="bar">
+			<div class="left">	
+				<section>
+					<p class="p4">Progresso da Construção do Site</p>
+					<div id="prog">
+						<div class="progresso">
+							<div class="progresso2">
+							20%
+							</div>			
+						</div>
 					</div>
-				</div>
-			</section>
-			<section>
-				<p class="p4">Nível de Conheçimento Portugol</p>
-				<div id="prog">
-					<div class="progresso">
-						<div class="progresso3">
-						90%
-						</div>			
+				</section>
+				<section>
+					<p class="p4">Nível de Conheçimento Portugol XD</p>
+					<div id="prog">
+						<div class="progresso">
+							<div class="progresso3">
+							90%
+							</div>			
+						</div>
 					</div>
-				</div>
-			</section>
-			<section>
-				<p class="p4">Nível de Conheçimento Programação em C</p>
-				<div id="prog">
-					<div class="progresso">
-						<div class="progresso4">
-						5%
-						</div>			
+				</section>
+				<section>
+					<p class="p4">Nível de Conheçimento Programação em C</p>
+					<div id="prog">
+						<div class="progresso">
+							<div class="progresso4">
+							5%
+							</div>			
+						</div>
 					</div>
-				</div>
-			</section>
-		</div>	
+				</section>
+			</div>
+			<div class="right">
+				<section>
+					<p class="p4">Nível de Conheçimento HTML 5</p>
+					<div id="prog">
+						<div class="progresso">
+							<div class="progresso2">
+							20%
+							</div>			
+						</div>
+					</div>
+				</section>
+				<section>
+					<p class="p4">Nível de Conheçimento CSS 3</p>
+					<div id="prog">
+						<div class="progresso">
+							<div class="progresso2">
+							20%
+							</div>			
+						</div>
+					</div>
+				</section>
+				<section>
+					<p class="p4">Nível de Conheçimento JavaScript</p>
+					<div id="prog">
+						<div class="progresso">
+							<div class="progresso0">
+							Ainda Serei Apresentado
+							</div>			
+						</div>
+					</div>
+				</section>
+			</div>
+		</section>	
 	<footer>
 		<div class="foot">
 			Copyright 2016 <i class="fa fa-copyright copy"></i>
