--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 					<p class="p4">Progresso da Construção do Site</p>
 					<div id="prog">
 						<div class="progresso">
-							<div class="progresso2">
-							20%
+							<div class="progressosite">
+							40%
 							</div>			
 						</div>
 					</div>
