--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		</div>
 		<article class="art">
 			<p class="p1">O início no curso de TSI foi muito complicado pois trabalhar e estudar não é fácil, a princípio teve uma incompatibilidade de horários que me levou a pensar que não poderia cursar, mas como um milagre de Deus tudo se ajustou e foi possível começar o curso e graças a Deus estou gostando muito, pois é exatamente como eu imagina, justamente o que eu procurava.</p><br>
-			<p class="p1"><strong>Pretenções Futuras</strong></p>
+			<p class="p1"><strong>Pretenções Futuras</strong></p><br>
 			<p class="p1">Depois de formado minha intenção é trabalhar com programação e criação de páginas web, pois foram as vertentes do curso pelas quais tive maior afinidade e é uma parte do curso na qual posso utilizar na empresa que trabalho com o intuito de melhorar sistemas de acesso e facilitar nosso trabalho que é todo baseado em sistemas on-line.</p>
 		</article>
 		<section>
