--- a/index.html
+++ b/index.html
@@ -46,30 +46,30 @@
 		<p class="p3">Meus Trabalhos</p>
 		<div class="grid grid-pad">
 			<div class="col-1-4">
-				<a href=""><img src="trab1.png" width="100%"></a>
+				<a href="krlin.github.io/trab1.png"><img src="trab1.png" width="100%"></a>
 			</div>
 			<div class="col-1-4">
-				<a href=""><img src="trab2.png" width="100%"></a>
+				<a href="krlin.github.io/trab2.png" target="_blank"><img src="trab2.png" width="100%"></a>
 			</div>
 			<div class="col-1-4">
-				<a href=""><img src="trab3.png" width="100%"></a>
+				<a href="krlin.github.io/trab3.png" target="_blank"><img src="trab3.png" width="100%"></a>
 			</div>
 			<div class="col-1-4">
-				<a href=""><img src="trab4.png" width="100%"></a>
+				<a href="krlin.github.io/trab4.png" target="_blank"><img src="trab4.png" width="100%"></a>
 			</div>
 		</div>
 		<div class="grid grid-pad">
 			<div class="col-1-4">
-				<a href=""><img src="trab5.png" width="100%"></a>
+				<a href="krlin.github.io/trab5.png" target="_blank"><img src="trab5.png" width="100%"></a>
 			</div>
 			<div class="col-1-4">
-				<a href=""><img src="trab6.png" width="100%"></a>
+				<a href="krlin.github.io/trab6.png" target="_blank"><img src="trab6.png" width="100%"></a>
 			</div>
 			<div class="col-1-4">
-				<a href=""><img src="trab7.png" width="100%"></a>
+				<a href="krlin.github.io/trab7.png" target="_blank"><img src="trab7.png" width="100%"></a>
 			</div>
 			<div class="col-1-4">
-				<a href=""><img src="trab8.png" width="100%"></a>
+				<a href="krlin.github.io/trab8.png" target="_blank"><img src="trab8.png" width="100%"></a>
 			</div>
 		</div>
 	</article>
