--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<p class="p3">Meus Trabalhos</p>
 		<div class="grid grid-pad">
 			<div class="col-1-4">
-				<a href="krlin.github.io/trab1.png"><img src="trab1.png" width="100%"></a>
+				<a href="krlin.github.io/trab1.png" target="_blank"><img src="trab1.png" width="100%"></a>
 			</div>
 			<div class="col-1-4">
 				<a href="krlin.github.io/trab2.png" target="_blank"><img src="trab2.png" width="100%"></a>
