--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Carlos Guimarães</title>
-		<meta name="description" content="portifolio">
+		<meta name="description" content="portfólio">
 		<meta name="author" content="Carlos">
-		<meta name="keywords" content="portifolio carlos,carlos guimaraes,tsi,ifbarbacena">
+		<meta name="keywords" content="portfólio carlos,carlos guimaraes,tsi,ifbarbacena">
 		<meta name="robots" content="index,follow">
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
