--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			<p class="p1">Depois de formado minha intenção é trabalhar com programação e criação de páginas web, pois foram as vertentes do curso pelas quais tive maior afinidade e é uma parte do curso na qual posso utilizar na empresa que trabalho com o intuito de melhorar sistemas de acesso e facilitar nosso trabalho que é todo baseado em sistemas on-line.</p>
 		</article>
 		<section>
-			<form method="post" action="contato.php">
+			<form method="post" action="#">
 				<p>Contato</p>
 				<input type="name" placeholder="Nome"></input><br>
 				<input type="DDD" placeholder="DDD"></input><input type="phone" placeholder="Telefone"></input><br>
