--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</section>	
 		</div>
 		<article class="art">
-			<p class="p1">O início no curso de TSI foi muito complicado pois trabalhar e estudar não é fácil, a princípio teve uma incompatibilidade de horários que me levou a pensar que não poderia cursar, mas como um milagre de Deus tudo se ajustou e foi possível começar o curso e graças a Deus estou gostando muito, pois é exatamente como eu imagina, justamente o que eu procurava.</p>
+			<p class="p1">O início no curso de TSI foi muito complicado pois trabalhar e estudar não é fácil, a princípio teve uma incompatibilidade de horários que me levou a pensar que não poderia cursar, mas como um milagre de Deus tudo se ajustou e foi possível começar o curso e graças a Deus estou gostando muito, pois é exatamente como eu imaginava, justamente o que eu procurava.</p>
 		</article>
 		<article class="trab">
 			<p class="p3">Meus Trabalhos</p>
