--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
 		<section>
 			<form method="POST" action="https://formspree.io/carlinhosnacif@hotmail.com">
 				<p>Contato</p>
-				<input type="name" placeholder="Nome"></input><br>
-				<input type="DDD" placeholder="DDD"></input><input type="phone" placeholder="Telefone"></input><br>
-				<input type="email" placeholder="E-mail de contato"></input><br>
-				<textarea placeholder="Mensagem"></textarea><br>
+				<input name="name" placeholder="Nome"></input><br>
+				<input name="DDD" placeholder="DDD"></input><input type="phone" placeholder="Telefone"></input><br>
+				<input type="email" name="email" placeholder="E-mail de contato"></input><br>
+				<textarea name="msg" placeholder="Mensagem"></textarea><br>
 				<input type="submit" value="Enviar"></input>
 			</form>
 		</section>
